# debate

./: .gitignore  README.md  WORKING_STATE.md  config.py  debate.py  llm_selectors.py  playwright_client.py  pyproject.toml  quick.py  server.py  setup_auth.py  setup_auth_pw.py  setup_one.py  triage.py  turbo.py  uc_client.py  utils.py
alfred/: info.plist
static/: index.html
