[project]
name = "debate"
version = "0.1.0"
description = "Multi-LLM debate synthesizer using web subscriptions"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "typer>=0.12.0",
    "rich>=13.0",
]

[project.scripts]
debate = "debate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
